After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761577 - GtkStyleContext warning spam
GtkStyleContext warning spam
Status: RESOLVED FIXED
Product: yelp
Classification: Applications
Component: General
3.19.x
Other Linux
: Normal normal
: ---
Assigned To: Yelp maintainers
Yelp maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-05 01:19 UTC by Michael Catanzaro
Modified: 2016-03-01 10:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
settings: Fix GtkStyleContext warning spam (2.95 KB, patch)
2016-02-05 01:24 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2016-02-05 01:19:10 UTC
GtkStyleContext warning spam

(yelp:3500): Gtk-WARNING **: State 0 for GtkTextView 0x16fc280 doesn't match state 128 set via gtk_style_context_set_state ()

(yelp:3500): Gtk-WARNING **: State 0 for GtkTextView 0x16fc280 doesn't match state 128 set via gtk_style_context_set_state ()

(yelp:3500): Gtk-WARNING **: State 512 for GtkLinkButton 0x15fd250 doesn't match state 640 set via gtk_style_context_set_state ()

(yelp:3500): Gtk-WARNING **: State 1024 for GtkLinkButton 0x15fd250 doesn't match state 640 set via gtk_style_context_set_state ()
Comment 1 Michael Catanzaro 2016-02-05 01:24:33 UTC
Created attachment 320474 [details] [review]
settings: Fix GtkStyleContext warning spam

This is happening in basically every application, due to implementation
changes in GtkStyleContext
Comment 2 David King 2016-03-01 10:31:39 UTC
Review of attachment 320474 [details] [review]:

Pushed to master as commit 602e5e3ecb08d1b24ee20f177dd59cdba6238ebb. Thanks!