settings: Fix GtkStyleContext warning spam

This is happening in basically every application, due to implementation
changes in GtkStyleContext

https://bugzilla.gnome.org/show_bug.cgi?id=761577